--- a/package.json
+++ b/package.json
@@ -22,45 +22,38 @@
     "shell": "bash"
   },
   "scripts": {
-    "pretest": "nr build",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "changelog": "npx auto-changelog",
+    "deps:fresh": "taze -r -w -i",
+    "eslint": "eslint --cache --fix .",
+    "lint:spell": "cspell .",
+    "lint:secret": "secretlint \"**/*\"",
+    "lint:md": "node scripts/markdownlint.js",
+    "format": "prettier --write --cache .",
+    "size-limit": "size-limit",
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "test:cli": "turbo run --filter=cli test:cli",
+    "test:storybook": "turbo run --filter=ui test:storybook",
+    "test:ci": "CI=true vitest run -r packages",
+    "test:watch": "vitest run -r packages --watch",
     "clean": "node scripts/commander.js clean",
     "clean:nm": "node scripts/commander.js clean --nm",
-    "build": "pnpm -r --filter='./packages/**' run build",
-    "build:storybook": "pnpm run -C './packages/ui' storybook:build",
-    "deps:fresh": "taze -r -w -i",
-    "dev": "pnpm -r --filter='./packages/**' run dev",
-    "format": "prettier --write --cache .",
-    "lint": "eslint --cache --fix .",
-    "lint:spell": "cspell .",
-    "lint:size-limit": "size-limit",
-    "lint:secret": "secretlint \"**/*\"",
-    "lint:md": "node scripts/markdownlint.js $(glob '{*.md,{.github,packages,fixtures}/**/*.md}' -i '**/node_modules/**')",
-    "release": "release-it --ci",
-    "test": "vitest run -r packages",
-    "test:ci": "nr build && CI=true nr test",
-    "test:watch": "nr build && nr test --watch",
-    "test:cli": "nr build && pnpm run -C './packages/cli' test:cli",
-    "test:storybook": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"pnpm run -C ./packages/ui preview:storybook\" \"npx wait-on tcp:6006 && pnpm run -C ./packages/ui test:storybook\"",
-    "all": "nr clean && nr deps:fresh && nr format && nr lint && nr lint:spell && nr lint:secret && nr lint:md && nr test:ci && nr test:cli && nr lint:size-limit && nr test:storybook"
+    "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
+    "test": "nr test:ci && nr test:cli && nr test:storybook",
+    "all": "nr clean && nr deps:fresh && nr format && nr lint && nr build && nr test && nr size-limit"
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
-    "@release-it/bumper": "^5.0.0",
-    "@release-it/conventional-changelog": "^7.0.0",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.3",
     "@size-limit/file": "^8.2.6",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
-    "auto-changelog": "^2.4.0",
-    "concurrently": "^8.2.0",
     "cspell": "^6.31.2",
     "envinfo": "^7.10.0",
     "eslint": "^8.45.0",
@@ -75,19 +68,19 @@
     "ora": "^6.3.1",
     "pnpm": "^8.6.9",
     "prettier": "^3.0.0",
-    "release-it": "^16.1.2",
     "rimraf": "^5.0.1",
     "sade": "^1.8.1",
     "secretlint": "^7.0.3",
     "serialize-error": "^11.0.0",
     "simple-git-hooks": "^2.8.1",
     "size-limit": "^8.2.6",
+    "snyk": "^1.1193.0",
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
+    "turbo": "^1.10.9",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0",
-    "wait-on": "^7.0.1"
+    "vitest": "^0.33.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm run all"
@@ -104,6 +97,10 @@
     {
       "path": "./packages/ui/dist/index.js",
       "limit": "500B"
+    },
+    {
+      "path": "./packages/utils/dist/index.js",
+      "limit": "600B"
     }
   ],
   "auto-changelog": {
