--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig/tsconfig.node.json",
+  "extends": "../tsconfig/node.json",
   "compilerOptions": {
     "paths": {
       "@gfft/cli": ["./src/index.ts"]
