feat: template generate and modified commander (#84)
* feat: template generate and modified commander

* fix: pnpm installation with --no-frozen-lockfile

* chore: commited uncomited files

* fix: gitkeep file added in fixtures/output location

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
     "ghcr.io/devcontainers/features/github-cli": "latest",
     "ghcr.io/devcontainers/features/docker-in-docker": "latest"
   },
-  "onCreateCommand": "pnpm install",
+  "onCreateCommand": "pnpm i --no-frozen-lockfile",
   "postAttachCommand": "pnpm build",
   "waitFor": "onCreateCommand",
   "customizations": {
