--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Lint All
         run: pnpm run lint
 
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Build
         run: pnpm run build
 
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Test
         run: |
           pnpm run build
@@ -64,7 +64,7 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Test CLI
         run: pnpm run test:cli
 
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
       - name: Install
-        run: pnpm i
+        run: pnpm i --no-frozen-lockfile
       - name: Serve Storybook and run tests
         run: pnpm run test:storybook
 
@@ -85,7 +85,7 @@ jobs:
   #     - uses: actions/checkout@master
   #     - uses: ./.github/actions/setup-node
   #     - name: Install
-  #       run: pnpm i
+  #       run: pnpm i --no-frozen-lockfile
   #     - name: Snyk monitor
   #       run: |
   #         npx snyk auth SNYK_TOKEN
