--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.6.9",
+  "packageManager": "pnpm@8.6.10",
   "description": "Generate file from template file",
   "license": "MIT",
   "sideEffects": true,
@@ -55,32 +55,34 @@
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "cspell": "^6.31.2",
+    "del": "^7.0.0",
     "envinfo": "^7.10.0",
     "eslint": "^8.45.0",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-regexp": "^1.15.0",
+    "fs-extra": "^11.1.1",
     "esno": "^0.17.0",
-    "execa": "^7.1.1",
     "glob": "^10.3.3",
     "markdownlint": "^0.29.0",
     "ora": "^6.3.1",
-    "pnpm": "^8.6.9",
+    "pnpm": "^8.6.10",
     "prettier": "^3.0.0",
-    "rimraf": "^5.0.1",
     "sade": "^1.8.1",
     "secretlint": "^7.0.3",
     "serialize-error": "^11.0.0",
-    "simple-git-hooks": "^2.8.1",
+    "simple-git-hooks": "^2.9.0",
     "size-limit": "^8.2.6",
     "snyk": "^1.1193.0",
     "taze": "^0.11.2",
+    "tempura": "^0.4.0",
     "tsup": "^7.1.0",
     "turbo": "^1.10.9",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "zod": "^3.21.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm run all"
