chore: ts configuration using config package module (#85)
* refactor: ts configuration using config package module

* chore: pr title checker prefixes modified

* chore: pr title checker prefixes modified added

--- a/.github/pr-title-checker-config.json
+++ b/.github/pr-title-checker-config.json
@@ -4,7 +4,7 @@
     "color": "EEEEEE"
   },
   "CHECKS": {
-    "prefixes": ["fix: ", "feat: "],
+    "prefixes": ["fix: ", "feat: ", "chore:", "refactor:", "docs:", "ci:", "revert:", "chore(deps-dev):", "style:", "test:", "modified:"],
     "regexp": "docs\\(v[0-9]\\): ",
     "regexpFlags": "i",
     "ignoreLabels" : []
