--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../config/src/ts/node.json",
+  "extends": "./src/ts/node.json",
   "compilerOptions": {
     "paths": {
       "@gfft/config": ["./src/index.ts"]
