--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "preact": "^10.16.0"
   },
   "devDependencies": {
+    "@gfft/config": "workspace:^",
     "@storybook/addon-coverage": "^0.0.9",
     "@storybook/addon-essentials": "7.1.0",
     "@storybook/addon-interactions": "7.1.0",
@@ -41,7 +42,7 @@
     "@storybook/testing-library": "^0.2.0",
     "concurrently": "^8.2.0",
     "storybook": "7.1.0",
-    "vite": "^4.4.6",
+    "vite": "^4.4.7",
     "wait-on": "^7.0.1"
   }
 }
