--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -33,8 +33,7 @@
     "dev": "tsup ./src/index.ts --watch"
   },
   "devDependencies": {
-    "esno": "^0.16.3",
-    "tsup": "^7.1.0"
-  },
-  "dependencies": {}
+    "deepmerge": "^4.3.1",
+    "esno": "^0.16.3"
+  }
 }
