--- a/package.json
+++ b/package.json
@@ -1,48 +1,39 @@
 {
-  "name": "gfft",
-  "type": "module",
-  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.6.10",
+  "name": "gfft",
+  "version": "0.0.0",
   "description": "Generate file from template file",
   "license": "MIT",
+  "author": "Joydip Roy <joydipand@gmail.com> (https://github.com/rjoydip)",
+  "repository": "rjoydip/gfft",
+  "type": "module",
+  "scripts": {
+    "all": "nr clean && nr deps:fresh && nr build && nr format && nr lint && nr test && nr size-limit",
+    "build": "turbo run build",
+    "clean": "node scripts/commander.js clean",
+    "clean:nm": "node scripts/commander.js clean --nm",
+    "deps:fresh": "taze -r -w -i",
+    "dev": "turbo run dev",
+    "eslint": "eslint --cache --fix .",
+    "format": "prettier --write --cache .",
+    "preinstall": "npx only-allow pnpm",
+    "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
+    "lint:md": "node scripts/markdownlint.js",
+    "lint:secret": "secretlint \"**/*\"",
+    "lint:spell": "cspell .",
+    "lint:staged": "lint-staged --diff main --quiet --no-stash",
+    "prepare": "husky install",
+    "size-limit": "size-limit",
+    "test": "nr test:ci && nr test:cli && nr test:storybook",
+    "test:ci": "CI=true vitest run -r packages",
+    "test:cli": "turbo run --filter=cli test:cli",
+    "test:storybook": "turbo run --filter=ui test:storybook",
+    "test:watch": "vitest run -r packages --watch"
+  },
   "sideEffects": true,
   "workspaces": [
     "packages/*"
   ],
-  "author": {
-    "name": "Joydip Roy",
-    "email": "joydipand@gmail.com",
-    "url": "https://github.com/rjoydip"
-  },
-  "repository": "rjoydip/gfft",
-  "engines": {
-    "node": ">=16",
-    "npm": ">=8",
-    "shell": "bash"
-  },
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "postinstall": "simple-git-hooks",
-    "deps:fresh": "taze -r -w -i",
-    "eslint": "eslint --cache --fix .",
-    "lint:spell": "cspell .",
-    "lint:secret": "secretlint \"**/*\"",
-    "lint:md": "node scripts/markdownlint.js",
-    "format": "prettier --write --cache .",
-    "size-limit": "size-limit",
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "test:cli": "turbo run --filter=cli test:cli",
-    "test:storybook": "turbo run --filter=ui test:storybook",
-    "test:ci": "CI=true vitest run -r packages",
-    "test:watch": "vitest run -r packages --watch",
-    "clean": "node scripts/commander.js clean",
-    "clean:nm": "node scripts/commander.js clean --nm",
-    "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
-    "test": "nr test:ci && nr test:cli && nr test:storybook",
-    "all": "nr clean && nr deps:fresh && nr build && nr format && nr lint && nr test && nr size-limit"
-  },
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
     "@commitlint/cli": "^17.6.7",
@@ -50,7 +41,7 @@
     "@gfft/config": "workspace:^",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.3",
     "@size-limit/file": "^8.2.6",
-    "@types/node": "^20.4.4",
+    "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vitest/coverage-v8": "^0.33.0",
@@ -66,14 +57,16 @@
     "esno": "^0.17.0",
     "fs-extra": "^11.1.1",
     "glob": "^10.3.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "markdownlint": "^0.29.0",
     "ora": "^6.3.1",
     "pnpm": "^8.6.10",
     "prettier": "^3.0.0",
+    "prettier-package-json": "^2.8.0",
     "sade": "^1.8.1",
     "secretlint": "^7.0.3",
     "serialize-error": "^11.0.0",
-    "simple-git-hooks": "^2.9.0",
     "size-limit": "^8.2.6",
     "snyk": "^1.1196.0",
     "taze": "^0.11.2",
@@ -85,9 +78,18 @@
     "vitest": "^0.33.0",
     "zod": "^3.21.4"
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm run all"
+  "engines": {
+    "node": ">=16",
+    "npm": ">=8",
+    "shell": "bash"
   },
+  "auto-changelog": {
+    "output": "CHANGELOG.md",
+    "template": "keepachangelog",
+    "unreleased": true,
+    "commitLimit": false
+  },
+  "packageManager": "pnpm@8.6.10",
   "size-limit": [
     {
       "path": "./packages/core/dist/index.js",
@@ -106,12 +108,6 @@
       "limit": "600B"
     }
   ],
-  "auto-changelog": {
-    "output": "CHANGELOG.md",
-    "template": "keepachangelog",
-    "unreleased": true,
-    "commitLimit": false
-  },
   "stackblitz": {
     "startCommand": "nr dev"
   }
