chore: project name changed

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -1,5 +1,5 @@
 ---
-name: GFFT node setup and cache
+name: TEMPL node setup and cache
 description: Setup for node, pnpm and cache configuration
 inputs:
   node-version:
