--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "@gfft/utils",
-  "type": "module",
-  "version": "0.1.0",
   "private": true,
-  "description": "GFFT utils service",
+  "name": "@templ/utils",
+  "version": "0.0.0",
+  "description": "TEMPL utils service",
   "license": "MIT",
-  "homepage": "https://github.com/rjoydip/gfft/tree/main/packages/utils#readme",
+  "homepage": "https://github.com/rjoydip/templ/tree/main/packages/utils#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rjoydip/gfft.git",
+    "url": "git+https://github.com/rjoydip/templ.git",
     "directory": "packages/utils"
   },
   "bugs": {
-    "url": "https://github.com/rjoydip/gfft/issues"
+    "url": "https://github.com/rjoydip/templ/issues"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -24,21 +21,21 @@
     },
     "./*": "./*"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "files": [
-    "dist",
-    "*.d.ts"
+    "*.d.ts",
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
+    "clean": "rimraf dist .turbo",
     "dev": "tsup ./src/index.ts --watch"
   },
-  "devDependencies": {
-    "esno": "^0.17.0",
-    "find-monorepo-root": "^1.0.3",
-    "tsup": "^7.1.0"
-  },
+  "types": "./dist/index.d.ts",
   "dependencies": {
-    "@gfft/config": "workspace:^",
-    "tiny-glob": "^0.2.9"
-  }
+    "@templ/config": "workspace:^",
+    "rimraf": "^5.0.1"
+  },
+  "devDependencies": {}
 }
