--- a/packages/utils/turbo.json
+++ b/packages/utils/turbo.json
@@ -2,7 +2,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["@gfft/config#build"]
+      "dependsOn": ["@templ/config#build"]
     }
   }
 }
