--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 ---
 name: 🚀 New feature proposal
-description: Propose a new feature to be added to GFFT
+description: Propose a new feature to be added to TEMPL
 labels: ["enhancement: pending triage"]
 body:
   - type: markdown
@@ -11,7 +11,7 @@ body:
     id: feature-description
     attributes:
       label: Clear and concise description of the problem
-      description: "As a developer using GFFT I want [goal / wish] so that [benefit]. If you intend to submit a PR for this issue, tell us in the description. Thanks!"
+      description: "As a developer using TEMPL I want [goal / wish] so that [benefit]. If you intend to submit a PR for this issue, tell us in the description. Thanks!"
     validations:
       required: true
   - type: textarea
@@ -37,7 +37,7 @@ body:
       label: Validations
       description: Before submitting the issue, please make sure you do the following
       options:
-        - label: Follow our [Code of Conduct](https://github.com/rjoydip/gfft/blob/main/CODE_OF_CONDUCT.md)
+        - label: Follow our [Code of Conduct](https://github.com/rjoydip/templ/blob/main/CODE_OF_CONDUCT.md)
           required: true
         - label: Check that there isn't already an issue that request the same feature to avoid creating a duplicate.
           required: true
