--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "private": true,
-  "name": "gfft",
+  "name": "templ",
   "version": "0.0.0",
-  "description": "Generate file from template file",
+  "description": "A project template",
   "license": "MIT",
   "author": "Joydip Roy <joydipand@gmail.com> (https://github.com/rjoydip)",
-  "repository": "rjoydip/gfft",
+  "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
     "all": "nr clean && nr deps:fresh && nr build && nr format && nr lint && nr test && nr size-limit",
     "build": "turbo run build",
-    "clean": "node scripts/commander.js clean",
-    "clean:nm": "node scripts/commander.js clean --nm",
+    "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
+    "clean:nm": "nr -C scripts clean:nm",
     "deps:fresh": "taze -r -w -i",
     "dev": "turbo run dev",
     "eslint": "eslint --cache --fix .",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
     "lint": "nr eslint && nr lint:spell && nr lint:secret && nr lint:md",
-    "lint:md": "node scripts/markdownlint.js",
+    "lint:md": "nr -C scripts lint:md",
     "lint:secret": "secretlint \"**/*\"",
     "lint:spell": "cspell .",
     "lint:staged": "lint-staged --diff main --quiet --no-stash",
@@ -28,55 +28,52 @@
     "test:ci": "CI=true vitest run -r packages",
     "test:cli": "turbo run --filter=cli test:cli",
     "test:storybook": "turbo run --filter=ui test:storybook",
-    "test:watch": "vitest run -r packages --watch"
+    "test:watch": "vitest run -r packages --watch",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "sideEffects": true,
   "workspaces": [
-    "packages/*"
+    "apps/*",
+    "docs/*",
+    "packages/*",
+    "scripts"
   ],
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
-    "@gfft/config": "workspace:^",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.3",
     "@size-limit/file": "^8.2.6",
+    "@templ/config": "workspace:^",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
+    "auto-changelog": "^2.4.0",
     "cspell": "^6.31.2",
-    "del": "^7.0.0",
     "envinfo": "^7.10.0",
     "eslint": "^8.45.0",
     "eslint-define-config": "^1.21.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-regexp": "^1.15.0",
-    "esno": "^0.17.0",
-    "fs-extra": "^11.1.1",
-    "glob": "^10.3.3",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "markdownlint": "^0.29.0",
-    "ora": "^6.3.1",
     "pnpm": "^8.6.10",
     "prettier": "^3.0.0",
     "prettier-package-json": "^2.8.0",
-    "sade": "^1.8.1",
+    "rimraf": "^5.0.1",
     "secretlint": "^7.0.3",
     "serialize-error": "^11.0.0",
     "size-limit": "^8.2.6",
     "snyk": "^1.1196.0",
     "taze": "^0.11.2",
-    "tempura": "^0.4.0",
     "tsup": "^7.1.0",
-    "turbo": "^1.10.11",
+    "turbo": "^1.10.12",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0",
-    "zod": "^3.21.4"
+    "vitest": "^0.33.0"
   },
   "engines": {
     "node": ">=16",
