--- a/packages/cli/turbo.json
+++ b/packages/cli/turbo.json
@@ -2,11 +2,11 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["@gfft/config#build", "@gfft/core#build"],
+      "dependsOn": ["@templ/config#build", "@templ/core#build"],
       "outputs": ["dist/**"]
     },
     "test:cli": {
-      "dependsOn": ["build", "@gfft/config#build", "@gfft/core#build"],
+      "dependsOn": ["build", "@templ/config#build", "@templ/core#build"],
       "cache": false
     }
   }
