--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "@gfft/config/src/ts/node.json",
+  "extends": "@templ/config/src/ts/node.json",
   "compilerOptions": {
     "paths": {
-      "@gfft/core": ["./src/index.ts"]
+      "@templ/core": ["./src/index.ts"]
     }
   },
   "exclude": ["dist", "*.d.ts"]
