--- a/packages/core/turbo.json
+++ b/packages/core/turbo.json
@@ -2,7 +2,7 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["@gfft/config#build", "@gfft/utils#build"]
+      "dependsOn": ["@templ/config#build", "@templ/utils#build"]
     }
   }
 }
