--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@gfft/ui",
   "private": true,
+  "name": "@templ/ui",
   "version": "0.0.1",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -13,22 +10,25 @@
     },
     "./*": "./*"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "files": [
-    "dist",
-    "*.d.ts"
+    "*.d.ts",
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
     "build:storybook": "storybook build",
+    "clean": "rimraf dist .turbo nyc_output storybook-static",
     "dev:storybook": "storybook dev -p 6006",
     "preview:storybook": "nr build:storybook && vite preview --outDir storybook-static --host 0.0.0.0 --port 6006 --strictPort true",
     "test:storybook": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"nr preview:storybook\" \"npx wait-on tcp:6006 && test-storybook --url http://127.0.0.1:6006 --coverage\""
   },
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "preact": "^10.16.0"
   },
   "devDependencies": {
-    "@gfft/config": "workspace:^",
     "@storybook/addon-coverage": "^0.0.9",
     "@storybook/addon-essentials": "7.1.0",
     "@storybook/addon-interactions": "7.1.0",
@@ -40,7 +40,9 @@
     "@storybook/preact-vite": "^7.1.1",
     "@storybook/test-runner": "^0.11.0",
     "@storybook/testing-library": "^0.2.0",
+    "@templ/config": "workspace:^",
     "concurrently": "^8.2.0",
+    "rimraf": "^5.0.1",
     "storybook": "7.1.0",
     "vite": "^4.4.7",
     "wait-on": "^7.0.1"
