--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         run: pnpm i --no-frozen-lockfile
       - name: Snyk monitor
         run: |
-          npx snyk auth SNYK_TOKEN
+          npx snyk auth $SNYK_TOKEN
           npx snyk monitor --all-projects
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
