--- a/package.json
+++ b/package.json
@@ -42,32 +42,35 @@
     "@antfu/ni": "^0.21.5",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@preact/preset-vite": "^2.5.0",
     "@secretlint/secretlint-rule-preset-recommend": "^7.0.3",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
     "@types/node": "^20.4.5",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "auto-changelog": "^2.4.0",
     "cspell": "^6.31.2",
     "envinfo": "^7.10.0",
-    "eslint": "^8.45.0",
-    "eslint-define-config": "^1.21.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint": "^8.46.0",
+    "eslint-define-config": "^1.22.0",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-regexp": "^1.15.0",
+    "happy-dom": "^10.5.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "pnpm": "^8.6.10",
+    "pnpm": "^8.6.11",
     "prettier": "^3.0.0",
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
     "secretlint": "^7.0.3",
     "serialize-error": "^11.0.0",
     "size-limit": "^8.2.6",
-    "snyk": "^1.1196.0",
+    "snyk": "^1.1198.0",
     "taze": "^0.11.2",
     "tsup": "^7.1.0",
     "turbo": "^1.10.12",
@@ -86,7 +89,7 @@
     "unreleased": true,
     "commitLimit": false
   },
-  "packageManager": "pnpm@8.6.10",
+  "packageManager": "pnpm@8.6.11",
   "size-limit": [
     {
       "path": "./packages/core/dist/index.js",
