chore: removed storybook testing, added unit testing of component, removed lint-staged

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,12 @@ ltex*
 .nyc_output
 .turbo
 .pnpm-store
-storybook-static
 node_modules
+
+# Storybook
+storybook-static
+
+# Playwrite
+/packages/**/test-results/
+/packages/**/playwright-report/
+/packages/**/playwright/.cache/
