--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,7 @@
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "folke.vscode-monorepo-workspace",
+        "ms-playwright.playwright",
         "ms-vscode-remote.remote-containers",
         "redhat.vscode-yaml",
         "zixuanchen.vitest-explorer",
