--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "aaron-bond.better-comments",
         "bierner.markdown-emoji",
         "christian-kohler.npm-intellisense",
         "dbaeumer.vscode-eslint",
@@ -24,6 +25,7 @@
         "editorconfig.editorconfig",
         "esbenp.prettier-vscode",
         "folke.vscode-monorepo-workspace",
+        "mintlify.document",
         "ms-playwright.playwright",
         "ms-vscode-remote.remote-containers",
         "redhat.vscode-yaml",
