--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "editor.formatOnSave": false
   },
   "prettier.enable": false,
-  "json.validate.enable": false
+  "json.validate.enable": false,
+  "docwriter.style": "Auto-detect"
 }
