feat: added third_party module web-check

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "apps/*",
     "docs/*",
     "packages/*",
-    "scripts"
+    "scripts",
+    "third_party/*"
   ],
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
