--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "repository": "rjoydip/templ",
   "type": "module",
   "scripts": {
-    "all": "nr clean && nr deps:fresh && nr build && nr format && nr lint && nr test && nr size-limit && nr version",
+    "all": "nr clean && nr deps:fresh && nr build && nr format && nr version && nr size-limit && nr lint && nr test",
     "build": "turbo run build",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
     "cleanup": "nr -C scripts cleanup",
@@ -46,8 +46,8 @@
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
     "@types/node": "^20.4.8",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "auto-changelog": "^2.4.0",
