--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,6 @@ jobs:
         scan-ref: '.'
         trivy-config: trivy.yaml
         format: 'table'
-        skip-dirs: 'third_party'
+        skip-dirs: './third_party/**'
         output: 'dependency-results.sbom.json'
         github-pat: ${{ secrets.GITHUB_TOKEN }}
