--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,8 +94,6 @@ jobs:
         image-ref: '.'
         scan-type: 'fs'
         scan-ref: '.'
-        trivy-config: trivy.yaml
-        format: 'table'
-        skip-dirs: './third_party/*'
+        skip-dirs: 'third_party'
         output: 'dependency-results.sbom.json'
         github-pat: ${{ secrets.GITHUB_TOKEN }}
