--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "type": "module",
   "scripts": {
     "all": "nr clean && nr deps:fresh && nr build && nr format && nr lint && nr test && nr size-limit && nr version",
-    "build": "turbo run build",
+    "build": "turbo run build --filter='./packages/**'",
     "clean": "rimraf .turbo .eslintcache .pnpm-store coverage && nr -r clean",
     "cleanup": "nr -C scripts cleanup",
     "deps:fresh": "taze -r -w -i",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --filter='./packages/**'",
+    "docs:build": "turbo run docs:build --filter='./packages/**'",
     "eslint": "eslint --cache --fix .",
     "format": "prettier --write --cache .",
     "preinstall": "npx only-allow pnpm",
@@ -38,19 +39,19 @@
   ],
   "devDependencies": {
     "@antfu/ni": "^0.21.5",
-    "@commitlint/cli": "^17.6.7",
-    "@commitlint/config-conventional": "^17.6.7",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@preact/preset-vite": "^2.5.0",
-    "@secretlint/secretlint-rule-preset-recommend": "^7.0.6",
+    "@secretlint/secretlint-rule-preset-recommend": "^7.0.7",
     "@size-limit/file": "^8.2.6",
     "@templ/config": "workspace:^",
-    "@types/node": "^20.4.8",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@types/node": "^20.4.9",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "@vitest/coverage-v8": "^0.34.1",
     "@vitest/ui": "^0.34.1",
     "auto-changelog": "^2.4.0",
-    "cspell": "^6.31.2",
+    "cspell": "^6.31.3",
     "envinfo": "^7.10.0",
     "eslint": "^8.46.0",
     "eslint-define-config": "^1.23.0",
@@ -58,13 +59,13 @@
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-regexp": "^1.15.0",
-    "happy-dom": "^10.8.0",
+    "happy-dom": "^10.9.0",
     "husky": "^8.0.3",
     "pnpm": "^8.6.12",
     "prettier": "^3.0.1",
     "prettier-package-json": "^2.8.0",
     "rimraf": "^5.0.1",
-    "secretlint": "^7.0.6",
+    "secretlint": "^7.0.7",
     "serialize-error": "^11.0.1",
     "size-limit": "^8.2.6",
     "snyk": "^1.1200.0",
