--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "@templ/config/src/ts/node.json",
   "compilerOptions": {
     "paths": {
-      "@templ/core": ["./src/index.ts"]
+      "@templ/core": ["src/index.ts"]
     }
   },
+  "include": ["src"],
   "exclude": ["dist", "*.d.ts"]
 }
