--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "@templ/config/src/ts/preact.json",
   "compilerOptions": {
     "paths": {
-      "@templ/ui": ["./src/index.ts"]
+      "@templ/ui": ["src/index.ts"]
     }
   },
-  "exclude": ["dist", "*.d.ts"]
+  "include": ["src"],
+  "exclude": ["dist", "*.d.ts", "storybook-static"]
 }
