--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -29,13 +29,18 @@
   ],
   "scripts": {
     "build": "tsup",
-    "clean": "rimraf dist .turbo",
-    "dev": "tsup ./src/index.ts --watch"
+    "clean": "rimraf .turbo dist docs",
+    "dev": "tsup ./src/index.ts --watch",
+    "docs:preview": "sirv docs",
+    "docs:build": "typedoc src/index.ts"
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@templ/config": "workspace:^",
-    "rimraf": "^5.0.1"
+    "@templ/config": "workspace:^"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "rimraf": "^5.0.1",
+    "sirv-cli": "^2.0.2",
+    "typedoc": "^0.24.8"
+  }
 }
